# crewai-orchestration

./: .env  README.md  pyproject.toml
src/crewai_orchestration/: __init__.py  main.py
src/crewai_orchestration/crews/: teaching_crew.py
src/crewai_orchestration/crews/config/: agents.yaml  tasks.yaml
