[project]
name = "crewai-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saim-Hassan786", email = "saimaiengineer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
crewai-orchestration = "crewai_orchestration:main"
orchestration = "crewai_orchestration.main:flow_init"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
